# simple_placecard_creator

./: .gitignore  README.md  create_placecards.py  extract_guests.py  pyproject.toml
