[project]
name = "simple-placecard-creator"
version = "0.1.0"
description = "Create wedding place cards (席札) from a guest list xlsx"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "python-pptx>=1.0",
]

[project.scripts]
extract-guests = "extract_guests:main"
create-placecards = "create_placecards:main"
